--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,9 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 server:
-  port: '8888'
+  port: '8080'
 springdoc:
   api-docs:
-    path: /api-docs
+    path: /v1/docs/api
+  swagger-ui:
+    path: /v1/docs/api-ui.html
